[package]
name = "kard"
version = "0.0.1"
authors = ["Saleem Rashid <dev@saleemrashid.com>"]

repository = "https://github.com/saleemrashid/kard-rs"

license = "MIT/Apache-2.0"
readme = "README.md"

keywords = ["ccid", "smartcard", "no_std"]
categories = ["cryptography", "embedded", "no-std"]

description = """
Chip card interface device (CCID) implementation for embedded devices
"""

[badges]
travis-ci = { repository = "saleemrashid/kard-rs" }

[dependencies]
